# Blender-Render-Schedule

./: .gitignore  AGENTS.md  BRender.spec  BRender_App.py  CHANGELOG_DEV.md  DECISIONS.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt
brender/: __init__.py  app.py  config.py  helpers.py  rendering.py
docs/: INSTALL_WINDOWS.md
scripts/: build_windows.ps1  package_release.ps1
