[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brender"
version = "0.1.0"
description = "A modern Blender render queue desktop app for scheduling and managing batch renders."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "customtkinter>=5.2,<6.0",
]
authors = [
  { name = "Decorium" }
]
urls = { Homepage = "https://github.com/your-username/brender", Issues = "https://github.com/your-username/brender/issues" }
keywords = ["blender", "render", "queue", "batch", "desktop", "customtkinter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

[project.scripts]
brender = "brender.app:main"

[tool.setuptools]
packages = ["brender"]
